@@ -104,7 +104,6 @@ Rd2latex <- function(Rd, out = "", defines = .Platform$OS.type,
 
     sectionExtras <-
     c("\\usage"="verbatim",
-      "\\arguments"="ldescription",
       "\\examples"="ExampleCode")
 
     inCodeBlock <- FALSE ## used to indicate to texify where we are
@@ -514,7 +513,7 @@ Rd2latex <- function(Rd, out = "", defines = .Platform$OS.type,
                    	i <- i - 1
                    },
                    "\\item" = {
-                       if (blocktag == "\\value" && !inList) {
+                       if (blocktag %in% c("\\value", "\\arguments") && !inList) {
                            of1("\\begin{ldescription}\n")
                            inList <- TRUE
                        }
@@ -602,10 +601,7 @@ Rd2latex <- function(Rd, out = "", defines = .Platform$OS.type,
             title <- envTitles[tag]
             of0("%\n\\begin{", title, "}")
             extra <- sectionExtras[tag]
-            if(!is.na(extra)) {
-                of0("\n\\begin{", extra, "}")
-                if(extra == "ldescription") of1("\\relax")
-            }
+            if(!is.na(extra)) of0("\n\\begin{", extra, "}")
             if(tag %in% c("\\usage", "\\examples")) inCodeBlock <<- TRUE
             writeSectionInner(section, tag)
  	    inCodeBlock <<- FALSE
